CMakeLists.txt中添加WOSS头文件路径，woss-aloha-examples.cc中删除bellhop路径

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ add_definitions(-DNS3_WOSS_SUPPORT -DWOSS_MULTITHREAD)
 
 link_libraries(WOSS)
 
+include_directories(/opt/WOSS/woss /opt/WOSS/woss/woss_def /opt/WOSS/woss/woss_db)
+
 build_lib(
         LIBNAME woss-ns3
         SOURCE_FILES
